exports[`attest has correct payload in JWT for an attestation 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "claim": Object {
      "email": "bingbangbung@email.com",
    },
    "exp": 1485321134996,
    "iat": 1485321133996,
    "iss": "0x001122",
    "sub": "0x112233",
  },
  "signature": "-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
}
`;

exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "x5wOEbEa8gQtKtfteSDHkkIaW30kZmI9I8EQLk8-DmxL9GteEa9hvIAi8Zhxo22FPDFErxIpp48Ckgp9_ZsIEA",
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "831teGtcqKacto5LDMLVURpCHxUN9Vvx2IN0-b05Q5gU3Md1wiuRDM91tP5Q0AyYTr1RTnkoYwmMcNH7wke7oA",
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signature": "ky_W_qmst3zDVDdlEihcI3t0Gv_Q-fWy2cxwayfWINXsrjMSJIqz1OYcKCLTteghjPLztqKYu94Jed0pCv5LeQ",
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "2i-T1Q4_vqcRPEz775irlCEWcW02coezZr1zD3dJbXiAmIPlgIL1QQ_UOGT5A5LKhOKF4eXvpxewTZmjg9uLBw",
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "callback": "https://myserver.com",
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "KJCZBA6CRibWB2ekNGpQkESQXzj1_6qjrAuZRKNRYVilVrIwIuT6D9gyigcUqsK3Ja2HkChNz9oAH78LvguJqw",
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "x5wOEbEa8gQtKtfteSDHkkIaW30kZmI9I8EQLk8-DmxL9GteEa9hvIAi8Zhxo22FPDFErxIpp48Ckgp9_ZsIEA",
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "address": "0x001122",
  "challenge": undefined,
  "name": "Davie",
  "pairId": undefined,
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "0x001122",
  "challenge": undefined,
  "name": "Davie",
  "pairId": undefined,
  "phone": "+15555551234",
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134996,
      "iat": 1485321133996,
      "iss": "0x001122",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJzdWIiOiIweDExMjIzMyIsImNsYWltIjp7ImVtYWlsIjoiYmluZ2JhbmdidW5nQGVtYWlsLmNvbSJ9LCJleHAiOjE0ODUzMjExMzQ5OTYsImlzcyI6IjB4MDAxMTIyIiwiaWF0IjoxNDg1MzIxMTMzOTk2fQ.-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "address": "0x001122",
  "challenge": undefined,
  "name": "David Chaum",
  "pairId": undefined,
  "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
}
`;
